added maven aggregated project for all samples