@@ -1,7 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>com.example</groupId>
+		<artifactId>samples</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<groupId>com.example</groupId>
 	<artifactId>spi-example</artifactId>
@@ -25,12 +31,6 @@
 				<artifactId>spi-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-
-			<dependency>
-				<groupId>org.testng</groupId>
-				<artifactId>testng</artifactId>
-				<version>5.14.10</version>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -46,12 +46,15 @@
 					<optimize>true</optimize>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.5</version>
-
+				<configuration>
+					<jvm>${jdk.home}/bin/java</jvm>
+					<!--forkMode>pertest</forkMode-->
+					<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m</argLine>
+				</configuration>
 				<executions>
 					<execution>
 						<id>integration-test</id>
